Fix styling for header so that image doesn't get cut off at narrower widths

--- a/src/components/dashboardHeader/dashboardHeader.module.css
+++ b/src/components/dashboardHeader/dashboardHeader.module.css
@@ -5,7 +5,7 @@
 }
 
 .bar {
-  width: 100%;
+  max-width: 100%;
   height: 64px;
   padding: 12px 16px;
   background-color: #000;
@@ -34,14 +34,12 @@
   background-color: #000;
   border: none;
   display: grid;
-  align-items: center;
   grid-template-columns: 2fr 1fr;
-  max-width: 30%;
   cursor: pointer;
-  margin-right: 16px;
 }
 
 .profileText {
+  margin: auto 0;
   display: grid;
 }
 
@@ -67,7 +65,6 @@
   border-radius: 50%;
   box-shadow: 0px 0px 12px #fff;
   margin-left: 24px;
-  margin-right: 16px;
 }
 
 .logoutDropdown {
@@ -82,7 +79,7 @@
   display: none;
 }
 
-@media (min-width: 425px) {
+@media (min-width: 768px) {
   .bp {
     display: none;
   }
